Fix contact sidebar submit button mobile styling by changing it to an anchor tag instead of an input

--- a/src/Components/Contact/ContactForm/ContactForm.css
+++ b/src/Components/Contact/ContactForm/ContactForm.css
@@ -34,13 +34,14 @@ textarea:hover {
 }
 
 .contact-submit {
-  padding: 1em 3em;
+  padding: .5em 1.5em;
   border-radius: 0px;
   -webkit-transition: all .5s ease;
   -moz-transition: all .5s ease;
   -o-transition: all .5s ease;
   transition: all .5s ease;
   border: 1px solid #fff;
+  text-decoration: none;
   color: #fff;
   background-color: #a661c2;
 }
